Feat: introducing an optional input

--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,10 @@ inputs:
     required: true
     description: 'The directory where the documentation files are located'
     default: '.'
+  repo_tag:
+    description: 'Giving the option to specify another version of the integrity-check repo or a GitHub SHA.'
+    required: false
+    default: 'v1.0.0'
 
 runs:
   using: 'composite'
@@ -29,12 +33,12 @@ runs:
         echo "Documentation files are located at ${{ inputs.doc_files_dir }}"
         ls -l && echo "^^^"
         echo $(pwd) && echo "<---"
-        ls -l /home/runner/work/_actions/NovoNordisk-OpenSource/integrity-check/v1.0.0 && echo "####"
+        ls -l /home/runner/work/_actions/NovoNordisk-OpenSource/integrity-check/${{ inputs.repo_tag }} && echo "####"
         echo "^^^"
       shell: bash
     - name: Run integrity check
       run: |
         echo "Running integrity check"
-        ACTUAL_DIR=/home/runner/work/_actions/NovoNordisk-OpenSource/integrity-check/v1.0.0
+        ACTUAL_DIR=/home/runner/work/_actions/NovoNordisk-OpenSource/integrity-check/${{ inputs.repo_tag }}
         python3 $ACTUAL_DIR/src/main.py ${{ inputs.feature_files_dir }} ${{ inputs.doc_files_dir }}
       shell: bash
